# roll-to-quest

./: .env.example  .gitignore  README.md  pyproject.toml
src/: settings.py
src/pair_generation/: DATASET_CARD.md  models.py  utils.py
src/scripts/: chunk_documents.py  convert_triplets_to_pairs.py  generate_pairs.py  generate_triplets.py  merge_triplets.py  push_to_hub.py
src/services/: basic_triplet_validation.py  cloud_storage.py  gemini.py  splitter.py  utils.py
src/templates/: create_triplets.md  generate_anchor_negative.md  generate_anchor_only.md
src/text_splitting/: models.py
src/triplet_generation/: models.py  utils.py
tests/: conftest.py  test_basic_triplet_validation.py  test_cloud_storage.py  test_convert_triplets_to_pairs.py  test_merge_triplets.py  test_splitters.py  test_utils.py
